# VTOL

./: .gitignore  .pylintrc  .travis.yml  README.md  autonomy.py  comm_sim.txt  comm_sim_detailed_search.json  comm_sim_detailed_search.txt  comm_sim_example.json  comm_sim_quick_scan.json  comm_sim_quick_scan.txt  configs.json  conversions.py  cv.py  descs  detailed_search.py  detailed_search_autonomy.py  detailed_search_cv.py  dev_requirements.txt  executable_picker.py  main.py  quick_scan.py  quick_scan_autonomy.py  quick_scan_cv.py  requirements.txt  send.py  setup.sh  sim.py  sololink.sdp  tox.ini  util.py
.github/ISSUE_TEMPLATE/: bug_report.md
archives/: detailed_search.py  detailed_search_autonomy.py  executable_picker.py  gps_denied.py  gps_denied_v2.py  quick_scan.py  quick_scan_autonomy.py  quick_scan_cv.py  template_matching.py
examples/: cv.py  cv_sim_test.py  gps_denied.py  initialize_map.py  receive.py  send.py  take_pictures.py  template_matching.py
examples/C++_decoder/: CMakeLists.txt  CMakeSettings.json  Compiling with CMake.txt  Stuka.cpp  reader.py  runtime.cpp
examples/NordenBombsight/: CMakeLists.txt  CMakeSettings.json  Compiling with CMake.txt  NordenBombsight.cpp  calibrate.cpp  reader.py  realsense2.lib  runtime.cpp
examples/RCOverride/: pid.py  rc_override.py
examples/RCOverride/SITLExampleWaypoints/: waypoint_test_1.txt  waypoint_test_2.txt  waypoint_test_3.txt  waypoint_test_4.txt
hooks/: pre-commit
logs/2019-04-20/: 12.54.59.086849.txt
simulator/: arducopter  packagelist  sim.py
src/: comm_sim_example.json  coms.py  conversions.py  cv.py  flight_objects.py  gps_denied_config.json  gps_denied_v2.py  hex.py  main.py  quad.py  quadplane.py  quadplane_launch.py  quadplane_main.py  test_vtol.py  util.py  vehicle_state.py  vtol.py
src/tests/: test_hex.py  test_quad.py  test_vtol.py
tests/: detailed_search_tests.py  quick_scan_tests.py
